RDM-11171 - implement fortify